@@ -11,8 +11,8 @@ useDynLib(SeqArray,
     SEQ_GetSpace, SEQ_Summary, SEQ_System,
     SEQ_VCF_NumLines, SEQ_VCF_Split, SEQ_VCF_Parse,
     SEQ_ToVCF_Init, SEQ_ToVCF_Done,
-    SEQ_Quote, SEQ_GetData, SEQ_Apply_Variant, SEQ_Apply_Sample,
-    SEQ_BApply_Variant,
+    SEQ_Quote, SEQ_GetData, SEQ_ListVarData,
+    SEQ_Apply_Variant, SEQ_Apply_Sample, SEQ_BApply_Variant,
     SEQ_ConvBED2GDS,
     SEQ_SelectFlag, SEQ_ResetChrom,
     SEQ_IntAssign, SEQ_AppendFill, SEQ_ClearVarMap, SEQ_TestNode,
