@@ -17,7 +17,8 @@ NEW FEATURES
 
     o new option 'warn' in `seqSetFilter()` to enable or disable the warning
 
-    o new function `seqNewVarData()` for variable-length data
+    o new functions `seqNewVarData()` and `seqListVarData()` for
+      variable-length data
 
 UTILITIES
 
